force-app/main/default/objects/Contract_Amendment__c/Contract_Amendment__c.object-meta.xml
<CustomObject>
    <label>Contract Amendment</label>
    <pluralLabel>Contract Amendments</pluralLabel>
    <nameField>
        <label>Amendment Number</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>