force-app/main/default/objects/Contract_Amendment__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contract Amendments</relationshipLabel>
    <relationshipName>Account_Contract_Amendments</relationshipName>
    <type>Lookup</type>
</CustomField>