force-app/main/default/objects/Contract_Amendment__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Unit</label>
    <referenceTo>Business_Unit__c</referenceTo>
    <relationshipLabel>Contract Amendments</relationshipLabel>
    <relationshipName>Business_Unit_Contract_Amendments</relationshipName>
    <type>Lookup</type>
</CustomField>