force-app/main/default/objects/Contract_Amendment__c/fields/Company_Signer__c.field-meta.xml
<CustomField>
    <fullName>Company_Signer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Company Signer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contract Amendments (Company Signer)</relationshipLabel>
    <relationshipName>Company_Signer_Contract_Amendments</relationshipName>
    <type>Lookup</type>
</CustomField>