force-app/main/default/objects/Contract_Amendment__c/fields/Company_Signer_Title__c.field-meta.xml
<CustomField>
    <fullName>Company_Signer_Title__c</fullName>
    <label>Company Signer Title</label>
    <length>36</length>
    <type>Text</type>
</CustomField>