force-app/main/default/objects/Contract_Amendment__c/fields/Contract_Amendment_Title__c.field-meta.xml
<CustomField>
    <fullName>Contract_Amendment_Title__c</fullName>
    <label>Contract Amendment Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>