force-app/main/default/objects/Contract_Amendment__c/fields/Contract_Amendment_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Amendment_Type__c</fullName>
    <label>Amendment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Change Order</fullName>
            </value>
            <value>
                <fullName>Contract Addendum</fullName>
            </value>
            <value>
                <fullName>Contract Amendment</fullName>
                <default>true</default>
                <label>Contract Amendment</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>