force-app/main/default/objects/Contract_Amendment__c/fields/Contract_Fee__c.field-meta.xml
<CustomField>
  <fullName>Contract_Fee__c</fullName>
  <label>Contract Fee</label>
  <type>Currency</type>
  <precision>16</precision>
  <scale>2</scale>
</CustomField>