force-app/main/default/objects/Contract_Amendment__c/fields/Document_Template__c.field-meta.xml
<CustomField>
    <fullName>Document_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Document Template</label>
    <referenceTo>Document_Template__c</referenceTo>
    <relationshipLabel>Contract Amendments</relationshipLabel>
    <relationshipName>Document_Template_Contract_Amendments</relationshipName>
    <type>Lookup</type>
</CustomField>