force-app/main/default/objects/Contract_Amendment__c/fields/File_Name__c.field-meta.xml
<CustomField>
    <fullName>File_Name__c</fullName>
    <description>File name for generated file.</description>
    <label>File Name</label>
    <formula>
        Name + "-" + Contract_Amendment_Title__c
    </formula>
    <type>Text</type>
</CustomField>