force-app/main/default/objects/Contract_Amendment__c/fields/Override_Fee__c.field-meta.xml
<CustomField>
    <fullName>Override_Fee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Override Fee</label>
    <type>Checkbox</type>
</CustomField>