force-app/main/default/objects/Contract_Amendment__c/fields/Proposal__c.field-meta.xml
<CustomField>
    <fullName>Proposal__c</fullName>
    <label>Proposal</label>
    <referenceTo>Proposal__c</referenceTo>
    <relationshipLabel>Contract Amendments</relationshipLabel>
    <relationshipName>Proposal_Contract_Amendments</relationshipName>
    <type>Lookup</type>
</CustomField>