force-app/main/default/objects/Contract_Amendment__c/fields/Written_Amount__c.field-meta.xml
<CustomField>
    <fullName>Written_Amount__c</fullName>
    <label>Written Amount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>